--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.8",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@icons-pack/react-simple-icons": "^9.6.0",
+    "@mui/icons-material": "^5.16.5",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "react": "^18",
