--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "svix": "^1.25.0"
+    "svix": "^1.25.0",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
